--- a/MediaWeb/Views/Shared/_Layout.cshtml
+++ b/MediaWeb/Views/Shared/_Layout.cshtml
@@ -21,19 +21,21 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MediaWeb</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <p id="Title">Mediaweb</p>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark navlink" asp-area="" asp-controller="Film" asp-action="Index">Film</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark navlink" asp-area="" asp-controller="Muziek" asp-action="Index">Muziek</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark navlink" asp-area="" asp-controller="Serie" asp-action="Index">Serie</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark navlink" asp-area="" asp-controller="User" asp-action="Index">Mijn account</a>
                         </li>
                     </ul>
                 </div>
@@ -47,11 +49,6 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2019 - MediaWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
