--- a/MediaWeb/Views/Film/Index.cshtml
+++ b/MediaWeb/Views/Film/Index.cshtml
@@ -1,22 +1,24 @@
 ﻿@model IEnumerable<MediaWeb.Models.Film.FilmListViewModel>
 
-    <table>
+    
+    <table class="table">
+        <tr><td></td><td><strong>Film</strong></td><td><strong>Genres</strong></td></tr>
         @foreach (var item in Model)
         {
-        <tr>
-            <td>
-                <strong>@item.Titel</strong>
-                <img style="float:right" src="@item.GetPicture()" />
-                @foreach (var genre in item.Genres)
-                {
-                    <small>@genre</small>
-                }
-            </td>
-            <td>
-                <a asp-controller="Film" asp-action="Detail" asp-route-id=@item.Id> Details</a><span> | </span>
-                <a asp-controller="Film" asp-action="Edit" asp-route-id=@item.Id> Edit</a><span> | </span>
-                <a asp-controller="Film" asp-action="Delete" asp-route-id=@item.Id>Delete</a>
-            </td>
-        </tr>
+            <tr>
+                <td><img src="@item.GetPicture" /></td>
+                <td>
+                    <strong><a asp-controller="Film" asp-action="Detail" asp-route-id=@item.Id>@item.Titel</a></strong>
+                </td>
+                <td>
+                    @foreach (var genre in item.Genres)
+                    {
+                        <small>@genre</small>
+                    }
+                </td>
+                
+            </tr>
         }
+
     </table>
+    <a asp-controller="Film" asp-action="Create">Create new film</a>
